--- a/My Favorites.html
+++ b/My Favorites.html
@@ -5,7 +5,7 @@
 </head>
 <body>
 <center>
-<body style="background-color:#FFFFCC;">
+<body style="text-align: center;background-color:#FFFFCC;">
 	<center>
 	<h1>About Me</h1>
 	<a href="https://www.facebook.com/Aizpyun/">My page</a>
@@ -26,10 +26,6 @@ And Suisei's story of being an indie vtuber, and being accepted into a big compa
 <img align="left" IMG SRC="Gif2.gif" style="width:300px;height:318px;">
 <img align="left" IMG SRC="Gif3.gif" style="width:300px;height:318px;">
 <a href="Parallax.html">Back</a>
-	
-
-
-
 </center>
 </body>
 </html>
