--- a/My Favorites.html
+++ b/My Favorites.html
@@ -20,10 +20,10 @@ And Suisei's story of being an indie vtuber, and being accepted into a big compa
 		<img align="center" src="Getcha.png" style="width:640px;height:360px;">
 <hr>
 <p> As I've been saying for quite a while now, Anime has always been a big part in my life. So here are some of the animes (and games) that I truly enjoyed throughout my life </p>
-<img align="left" IMG SRC="Gif.gif" style="width:300px;height:318px;">
-<img align="left" IMG SRC="Gif1.gif" style="width:300px;height:318px;"> 
-<img align="left" IMG SRC="Gif2.gif" style="width:300px;height:318px;">
-<img align="left" IMG SRC="Gif3.gif" style="width:300px;height:318px;">
+<img align="center" IMG SRC="Gif.gif" style="width:300px;height:318px;">
+<img align="center" IMG SRC="Gif1.gif" style="width:300px;height:318px;"> 
+<img align="center" IMG SRC="Gif2.gif" style="width:300px;height:318px;">
+<img align="center" IMG SRC="Gif3.gif" style="width:300px;height:318px;">
 <a href="Parallax.html">Back</a>
 </body>
 </html>
