--- a/About me.html
+++ b/About me.html
@@ -11,7 +11,7 @@
 	<a href="https://www.facebook.com/Aizpyun/">My page</a>
 	</center>
 	<hr>
-		<img align="center" src="Me.png" style="width:300px;height:300px;">
+		<img align="center" src="Family.png" style="width:300px;height:300px;">
 		<p>I am <b><u>Anthony Lorenzo D. Capua,</b></u> I am currently a student at Cavite State University, in the course Computer Science. I wish to pursue this course because I want to be able to make games that can help brighten up other people's day.</p>
 <hr>
 		<p> I was born on November 7, 2002 in the city of Imus. I was the 4th and last son of my mother and father, Melinda Capua and Antonio Capua. I was exposed to art at a very young age, and the art style I've been shooting for has always been "Anime", because it is something I truly enjoyed with my brothers and parents. Anime has always been a big part of my life growing up. And thus, it has influenced me greatly, even forming the basis of my artstyle. I studied at one school for majority of my life, Our Lady of the Pillar Catholic School Inc. It has been my school for both my primary and secondary education. 
