--- a/About me.html
+++ b/About me.html
@@ -7,7 +7,7 @@
 <center>
 <body style="background-color:#FFFFCC;">
 	<center>
-	<h1>About Me</h1>
+	<h1>Family</h1>
 	<a href="https://www.facebook.com/Aizpyun/">My page</a>
 	</center>
 	<hr>
